Ingress/dashboard-ingress.yaml
# Example of using POD : kubernetes dashboard with ingress
# minikube addons enable ingress  <- Enable k8s nginx implementation of ingress controller
# kubectl get pod -n kube-system <- You wll see ngix ingress controller pod in kube-system namespace
# kubectl get ns <- kubernetes-dashboard
# kubectl get all -n kubernetes-dashboard <- service/kubernetes-dashboard ClusterIP (internal service)

# kubectl apply -f dashboard-ingress.yaml
# kubectl get ingress -n kubernetes-dashboard 
# sudo vim /etc/hosts <- add the ip to host mapping in hosts file
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
